<resources>
    <string name="app_name">FandomFinds</string>
    <string name="text_welcome_user">Welcome</string>
    <string name="text_welcome_username">Join &amp; Unlock new features</string>
    <string name="text_notify_count">1</string>
    <string name="new_arrival">New Arrival</string>
    <string name="bottom_menu_explore">Explore</string>
    <string name="bottom_menu_account">Account</string>
    <string name="bottom_menu_cart">Cart</string>
    <string name="bottom_menu_wishlist">Wishlist</string>
    <string name="bottom_menu_home">Home</string>
    <string name="home_newArrival_title">title</string>
    <string name="home_newArrival_price">$123</string>
    <string name="home_deals_oldPrice"><strike>$123</strike></string>
    <string name="home_newArrival_feedbacks">1</string>
    <string name="home_searchbar_hint">Search</string>
    <string name="deals">Deals</string>
    <string name="new_arrival_seller">seller</string>
    <string name="home_seller_name">Seller Name</string>
    <string name="home_featured_sellers">Featured</string>
    <string name="seller_tag">\@maniya_streams</string>
    <string name="single_product_title">Title</string>
    <string name="single_product_price">Price</string>
    <string name="single_product_rating">4.5</string>
    <string name="single_product_rating_txt">Rating</string>
    <string name="single_product_feedback_count">10</string>
    <string name="single_product_feedback_txt">Feedbacks</string>
    <string name="single_product_description">Description</string>
    <string name="single_product_btn_buy_now">Buy Now</string>
    <string name="cart_title">CART</string>
    <string name="cart_order_summary_txt">Order Summary</string>
    <string name="cart_subtotal_txt">Subtotal</string>
    <string name="cart_subtotal_value">$ (subtotal)</string>
    <string name="cart_delivery_txt">Delivery</string>
    <string name="cart_delivery_value">$ (delivery)</string>
    <string name="cart_total_tax_txt">Total Tax</string>
    <string name="cart_total_tax_value">$ (total tax)</string>
    <string name="cart_total_txt">Total</string>
    <string name="cart_total_value">$ (total)</string>
    <string name="cart_information_txt">Information</string>
    <string name="cart_delivery_address_txt">Your Delivery Address</string>
    <string name="cart_delivery_address_value">None</string>
    <string name="cart_payment_method_txt">Payment Method</string>
    <string name="cart_payment_method_value">None</string>
    <string name="cart_order_now_btn">ORDER NOW</string>
    <string name="cart_empty_txt">Your Cart is Empty</string>
    <string name="cart_product_title">Title</string>
    <string name="cart_product_price">product_price</string>
    <string name="cart_total_product_price">total</string>
    <string name="cart_minus_button">-</string>
    <string name="cart_plus_button">+</string>
    <string name="cart_product_count">0</string>
    <string name="log_in_txt">LOG IN</string>
    <string name="sign_up_txt">SIGN UP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_btn">LOG IN</string>
    <string name="sign_in_enter_email">Enter Email</string>
    <string name="sign_in_enter_password">Enter Password</string>
    <string name="sign_in_log_in_with_google">Log In with Google</string>
    <string name="sign_up_in_or_text">OR</string>
    <string name="sign_up_as_text">Sign Up As :</string>
    <string name="sign_up_as_customer_text">Customer</string>
    <string name="sign_up_as_seller_text">Seller</string>
    <string name="sign_up_sign_up_with_google">Sign Up with Google</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="home_deals_discount_percentage_text">10% OFF</string>
    <string name="seller_public_profile_streamer_name">ManiYa Streams</string>
    <string name="seller_public_profile_follower_count">150K followers</string>
    <string name="seller_public_profile_store">STORE</string>
    <string name="seller_public_profile_about">ABOUT</string>
    <string name="seller_about_frag_about_me_title">About Me</string>
    <string name="seller_about_frag_description">Description</string>
    <string name="seller_about_frag_social_media_title">Social Media</string>
    <string name="social_media_name">Social Meida Name</string>
    <string name="social_media_link">Social Media Link</string>
    <string name="seller_about_frag_social_media">Social Media</string>
    <string name="seller_about_available_stores">Available Stores</string>
    <string name="seller_store_fragment_deals_title">Deals</string>
    <string name="seller_store_fragment_other_title">Other</string>
    <string name="seller_public_profile_follow">follow</string>
    <string name="explore_product_title">Title</string>
    <string name="explore_product_price">Price</string>
    <string name="explore_product_new_price">New Price</string>
    <string name="explore_product_seller_name">Seller Name</string>
    <string name="explore_title">EXPLORE</string>
    <string name="explore_seller_name">Seller Name</string>
    <string name="account_profile_info_title">Profile Information</string>
    <string name="account_billing_and_shipping_title">Billing and Shipping</string>
    <string name="account_purchase_history_title">Purchase History</string>
    <string name="account_seller_store_title">Products Store</string>
    <string name="account_logout_title">LOG OUT</string>
    <string name="profile_info_title">Profile Information</string>
    <string name="profile_info_fname_text">First Name</string>
    <string name="profile_info_lname_text">Last Name</string>
    <string name="profile_info_fname_hint">Enter First Name</string>
    <string name="profile_info_lname_hint">Enter Last Name</string>
    <string name="profile_info_email_text">Email</string>
    <string name="profile_info_public_name_seller">Public Name (requried*)</string>
    <string name="profile_info_seller_public_profile">Enter public name</string>
    <string name="profile_info_bio">Bio (About You)</string>
    <string name="profile_info_user_email">example@gmail.com</string>
    <string name="profile_info_social_media">Social Media</string>
    <string name="profile_info_seller_youtube_hint">Enter your YouTube channel link</string>
    <string name="profile_info_seller_twitter_hint">Enter your Twitter profile link</string>
    <string name="profile_info_seller_fb_hint">Enter your Facebook profile link</string>
    <string name="profile_info_seller_instagram_hint">Enter your Instagram account link</string>
    <string name="profile_info_seller_twitch_hint">Enter your Twitch channel link</string>
    <string name="profile_info_change_password_title">Change Password</string>
    <string name="profile_info_password_change_button">Set Password</string>
    <string name="profile_info_change_password_hint">Enter New Password</string>
    <string name="profile_info_save_changes_button">Save Changes</string>
    <string name="bs_title">Billing and Shipping</string>
    <string name="bp_shipping_address">Shipping Address</string>
    <string name="bs_shipping_address_hint">Enter Shipping Address</string>
    <string name="bs_postal_code_title">Postal Code</string>
    <string name="bs_postal_code_hint">Enter Postal Code</string>
    <string name="bs_mobile_number_title">Mobile Number</string>
    <string name="bs_mobile_number_hint">Enter Mobile Number</string>
    <string name="bs_save_details_button_text">Save Details</string>
    <string name="bs_payment_methods_title">Payment Methods</string>
    <string name="bs_paypal_address_hint">Enter your PayPal address</string>
    <string name="bs_paypal_address_set_button">SAVE</string>
    <string name="ph_title">Purchase History</string>
    <string name="ph_list_product_title_text">Product Title</string>
    <string name="ph_list_order_id">Order Id</string>
    <string name="ph_list_order_datetime"><![CDATA[Date & Time]]></string>
    <string name="ph_list_order_price_total">Total price</string>
    <string name="ph_item_product_title">Product Title</string>
    <string name="ph_item_product_count">1 Item</string>
    <string name="ph_item_total_price">$ (total price)</string>
    <string name="ph_item_purchased_date_text">Purchased Datetime :</string>
    <string name="ph_item_purchased_date">2023-11-24 01:02:00</string>
    <string name="ph_item_order_id_text">Order Id :</string>
    <string name="ph_item_order_id">OD_947463</string>
    <string name="ph_item_delivery_address">104/9, Nedurupitiya, Kandana.</string>
    <string name="ph_item_delivery_address_text">Delivery Address :</string>
    <string name="ph_item_seller_text">Seller :</string>
    <string name="ph_item_seller_name">Seller Name</string>
    <string name="ph_item_order_status">Order Status :</string>
    <string name="ph_item_order_status_value">(order status)</string>
    <string name="single_product_size_text">Size :</string>
    <string name="seller_store_title">MY STORE</string>
    <string name="seller_store_item_status">Product Status</string>
    <string name="seller_store_discount">Discount : None</string>
    <string name="seller_store_item_price">$ (Price)</string>
    <string name="seller_store_add_product_button">Add New Merchandise</string>
    <string name="seller_store_save_update_title_text">Title :</string>
    <string name="seller_store_save_update_title_hint">Enter the item title</string>
    <string name="seller_store_save_update_item_description">Description</string>
    <string name="seller_store_save_update_description_hint">Enter the description of the item</string>
    <string name="seller_store_save_update_item_price">Price :</string>
    <string name="seller_store_save_update_dollor">$</string>
    <string name="seller_store_save_update_discount_text">Discount :</string>
    <string name="seller_store_save_update_percentage">%</string>
    <string name="seller_store_save_update_iten_new_price">$ (New Price)</string>
    <string name="seller_store_save_update_type_text">Select type :</string>
    <string name="seller_store_save_update_small">S</string>
    <string name="seller_store_save_update_medium">M</string>
    <string name="seller_store_save_update_large">L</string>
    <string name="seller_store_save_update_extra_large">XL</string>
    <string name="seller_store_save_update_extra_small">XS</string>
    <string name="seller_store_save_upate_extra_extra_large">XXL</string>
    <string name="seller_store_save_update_button_text">SAVE</string>
    <string name="sign_up_in_skip_button_text">SKIP</string>
    <string name="sign_up_frag_email_hint">Email Address</string>
    <string name="signup_frag_password_hint">Password</string>
    <string name="login_frag_email_hint">Email Address</string>
    <string name="helper_text">Required*</string>
    <string name="login_frag_password_hint">Password</string>
    <string name="activity_main_login_or_sign_up_msg_text"><![CDATA[Sign Up & Login to purchase \nyour first product.]]></string>
    <string name="activity_main_signup_or_login"><u>Sign Up or Login</u></string>
    <string name="profile_info_last_name_hint">Enter Last Name</string>
    <string name="cart_error_message">Please fill your delievery details and payment method in order to make the order.</string>
    <string name="ph_item_order_size_text">Size :</string>
    <string name="ph_item_order_size_value">XS/S/M/L/XL/XXL</string>
    <string name="order_view_customer_email_title">Customer Email :</string>
    <string name="order_view_customer_email_value">example@gmail.com</string>
    <string name="order_view_customer_mobile">Customer Mobile :</string>
    <string name="order_view_customer_mobile_value">NONE</string>
    <string name="order_view_postal_code">Postal Code :</string>
    <string name="order_view_postal_code_value">(postal code)</string>
    <string name="order_view_complete_order_button">COMPLETE ORDER</string>
</resources>