<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragments.PurchasedItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/phItemBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/arrow" />

        <ImageView
            android:id="@+id/phItemProductImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/item_2" />

        <TextView
            android:id="@+id/phItemProductTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ph_item_product_title"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phItemProductCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/ph_item_product_count"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/phItemTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/ph_item_total_price"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phItemPurchasedDateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ph_item_purchased_date_text"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/phItemPurchasedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/ph_item_purchased_date"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phItemOrderIdTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ph_item_order_id_text"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phItemOrderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/ph_item_order_id"
                android:textSize="16dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/phItemDeliveryAddressTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ph_item_delivery_address_text"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phItemDeliveryAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ph_item_delivery_address"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/phItemSellerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ph_item_seller_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/grey_background"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/phItemSellerImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/account_default_profile_img" />

            <TextView
                android:id="@+id/phItemSellerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/ph_item_seller_name"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phItemOrderStatusTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ph_item_order_status"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phItemOrderStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:textColor="@color/red"
                android:gravity="start"
                android:text="@string/ph_item_order_status_value"
                android:textSize="20dp" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>