<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/grey_background"
    android:layout_marginBottom="8dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ph_product_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/item_1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ph_product_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ph_product_img"
        app:layout_constraintTop_toTopOf="@+id/ph_product_img">

        <TextView
            android:id="@+id/phListProductTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ph_list_product_title_text"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phListOrderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ph_list_order_id"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phListDateAndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ph_list_order_datetime"
                android:textColor="@color/solidGrey"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/phTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/ph_list_order_price_total"
                android:textSize="18dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>